# rag-workshop

./: .env.sample  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
notebook/: 0_Embedding_Search_with_Qdrant_and_OpenAI.ipynb  0_cold_jokes.csv  1_Embedding_Search_with_Qdrant_and_OpenAI.ipynb  1_Embedding_with_OpenAI.ipynb  2_Embedding_Search_with_Qdrant_and_OpenAI.ipynb  2_RAG_with_OpenAI.ipynb  3_Evaluation.ipynb  3_RAG_with_OpenAI.ipynb  4_RAG_DIY.ipynb  4_k8s_RAG_QA.ipynb  5_Evaluation.ipynb  6_k8s_RAG_QA.ipynb  Show_Case_Mcp.ipynb  rag-workshop.ipynb  servers_config.json
notebook/dataset/: 0_Embedding_with_OpenAI.ipynb
src/rag-workshop/: main.py
